<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/CardViewSerie"
        android:animateLayoutChanges="true"
>

    <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Poster Section -->

        <pl.jakubneukirch.binge_watch.views.TitleImageView
                android:id="@+id/airingTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <!-- Description Section -->
        <TextView
                android:id="@+id/itemDesc"
                android:textSize="16sp"
                android:gravity="fill_horizontal"
                android:layout_margin="16dp"
                android:visibility="gone"
                android:layout_below="@id/airingTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <!-- Button Section -->

        <LinearLayout
                android:id="@+id/buttonsFrame"
                android:layout_below="@+id/itemDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/expandButton"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
        >
            <Button
                    android:id="@+id/buttonAddFavorite"
                    android:text="@string/add_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <Button
                    android:id="@+id/buttonDetails"
                    android:text="@string/details"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

        <ImageButton
                android:id="@+id/expandButton"
                android:src="@drawable/ic_expand_more_black_24dp"
                android:background="@android:color/transparent"
                android:layout_margin="16dp"
                android:layout_below="@+id/itemDesc"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </RelativeLayout>


</android.support.v7.widget.CardView>