<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/testFragmentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.jakubneukirch.binge_watch.test.TestActivity">

</FrameLayout>
