<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainSwipeLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/airingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</android.support.v4.widget.SwipeRefreshLayout>